--- a/src/app/components/image-slideshow/image-slideshow.html
+++ b/src/app/components/image-slideshow/image-slideshow.html
@@ -1,5 +1,5 @@
 <div 
-  class="bg-white rounded-lg overflow-hidden shadow-lg relative h-80"
+  class="bg-white rounded-lg overflow-hidden shadow-lg relative h-48 sm:h-64 md:h-72 lg:h-80"
   (mouseenter)="onMouseEnter()"
   (mouseleave)="onMouseLeave()"
 >
@@ -25,31 +25,31 @@
     <!-- Navigation Arrows -->
     <button
       *ngIf="showNavigation && images.length > 1"
-      class="absolute left-4 top-1/2 transform -translate-y-1/2 bg-black bg-opacity-50 hover:bg-opacity-70 text-white rounded-full w-10 h-10 flex items-center justify-center transition-all duration-200 z-10"
+      class="absolute left-2 sm:left-4 top-1/2 transform -translate-y-1/2 bg-black bg-opacity-50 hover:bg-opacity-70 text-white rounded-full w-8 h-8 sm:w-10 sm:h-10 flex items-center justify-center transition-all duration-200 z-10"
       (click)="prevImage()"
       type="button"
       aria-label="Previous slide"
     >
-      <span class="text-xl leading-none">‹</span>
+      <span class="text-lg sm:text-xl leading-none">‹</span>
     </button>
     <button
       *ngIf="showNavigation && images.length > 1"
-      class="absolute right-4 top-1/2 transform -translate-y-1/2 bg-black bg-opacity-50 hover:bg-opacity-70 text-white rounded-full w-10 h-10 flex items-center justify-center transition-all duration-200 z-10"
+      class="absolute right-2 sm:right-4 top-1/2 transform -translate-y-1/2 bg-black bg-opacity-50 hover:bg-opacity-70 text-white rounded-full w-8 h-8 sm:w-10 sm:h-10 flex items-center justify-center transition-all duration-200 z-10"
       (click)="nextImage()"
       type="button"
       aria-label="Next slide"
     >
-      <span class="text-xl leading-none">›</span>
+      <span class="text-lg sm:text-xl leading-none">›</span>
     </button>
 
     <!-- Navigation Dots -->
     <div
       *ngIf="showDots && images.length > 1"
-      class="absolute bottom-4 left-1/2 transform -translate-x-1/2 flex space-x-2 z-10"
+      class="absolute bottom-2 sm:bottom-4 left-1/2 transform -translate-x-1/2 flex space-x-1 sm:space-x-2 z-10"
     >
       <div
         *ngFor="let image of images; let i = index"
-        class="w-3 h-3 rounded-full transition-all duration-300 cursor-pointer hover:scale-110"
+        class="w-2 h-2 sm:w-3 sm:h-3 rounded-full transition-all duration-300 cursor-pointer hover:scale-110"
         [class.bg-white]="currentImageIndex === i"
         [class.bg-opacity-50]="currentImageIndex !== i"
         [class.bg-opacity-100]="currentImageIndex === i"
