--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,12 +1,12 @@
 <!-- Slideshow and Notice Board Section -->
-<div class="flex gap-4 p-4 max-w-7xl mx-auto">
-  <!-- Slideshow: occupies 2/3 of the width -->
-  <div class="w-2/3">
+<div class="flex flex-col lg:flex-row gap-4 p-4 max-w-7xl mx-auto">
+  <!-- Slideshow: full width on mobile, 2/3 on desktop -->
+  <div class="w-full lg:w-2/3">
     <app-image-slideshow [images]="heroContent.images"></app-image-slideshow>
   </div>
   
-  <!-- Notice Board: occupies 1/3 of the width -->
-  <div class="w-1/3">
+  <!-- Notice Board: full width on mobile, 1/3 on desktop -->
+  <div class="w-full lg:w-1/3">
     <app-notice-board 
       [notices]="heroContent.notices" 
       [title]="heroContent.noticeBoardTitle" 
